deploy/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
  name: instructlab-inviter
  namespace: instructlab-public-inviter
  labels:
    app: instructlab-inviter
    app.kubernetes.io/component: instructlab-inviter
    app.kubernetes.io/instance: instructlab-inviter
    app.kubernetes.io/name: instructlab-inviter
    app.kubernetes.io/part-of: instructlab-inviter-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-namespace: instructlab-public-inviter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instructlab-inviter
  template:
    metadata:
      labels:
        app: instructlab-inviter
        deployment: instructlab-inviter
    spec:
      containers:
        - name: instructlab-inviter
          image: 'quay.io/instructlab-ui/inviter:main'
          ports:
            - containerPort: 8000
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
